# boxbot-finds-table

./: .gitmodules  README.md  boxbot.rviz
src/Control/boxbot_finds_table/: CMakeLists.txt  package.xml
src/Control/boxbot_finds_table/include/: table_finder_algo.h
src/Control/boxbot_finds_table/src/: fibonacci_client.cpp  table_finder_algo.cpp  table_finder_node.cpp
src/Simulator/boxbot_description/: CMakeLists.txt  package.xml
src/Simulator/boxbot_description/launch/: description.launch
src/Simulator/boxbot_description/urdf/: boxbot.urdf.xacro
src/Simulator/boxbot_gazebo/: CMakeLists.txt  package.xml
src/Simulator/boxbot_gazebo/launch/: boxbot_world.launch
src/Simulator/boxbot_gazebo/objects/: table.urdf.xacro
src/Simulator/boxbot_gazebo/worlds/: sky.world
