<?xml version="1.0"?>
<package>
  <name>boxbot_gazebo</name>
  <version>0.0.0</version>
  <description>Boxbot Gazebo ROS simulator</description>

  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
  <author>methylDragon</author>

  <license>BSD</license>

  <url type="website">http://github.com/methyldragon</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
